objects/Sowjanya__c.object
<CustomObject>
    <fields>
        <fullName>Email1__c</fullName>
        <label>Email Field 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email Field 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone Field 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone Field 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone Field 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Text10__c</fullName>
        <label>Text Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sowjanya</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone1__c</columns>
        <columns>Phone2__c</columns>
        <columns>Phone3__c</columns>
        <columns>Text1__c</columns>
        <columns>Text10__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <columns>Text9__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>sowjanya</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sowjanya Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sowjanya</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>